# myapp

./: .travis.yml  README.md  deploy.sh  myapp-service-account.json.enc  service-account.json.enc
api/: .gitignore  Dockerfile  Dockerfile.dev  README.md  main.go
api/datastore/: datastore.go  redis.go
api/handlers/: doodle.go
api/hub/: client.go  hub.go
api/models/: message.go  stroke.go
client/: Dockerfile  README.md  package.json  server.js
client/src/: config.ts  index.html  style.scss
client/src/app/: bootstrap.js  index.ts  messaging.ts
client/src/app/color/: color.js  wip-color.ts
client/webpack/: webpack.common.js
crate/: Cargo.toml
crate/src/: lib.rs
crate/src/doodle/: canvas.rs  menu.rs  messaging.js  messaging.ts  mod.rs
crate/src/messaging/: messaging.ts  messenger.rs  mod.rs
crate/src/models/: mod.rs  stroke.rs
k8s/: certificate.yaml  client-deployment.yaml  ingress-service.yaml  issuer.yaml  myapp-client-cluster-ip-service.yaml  myapp-client-deployment.yaml  myapp-ingress-service.yaml  myapp-server-cluster-ip-service.yaml  myapp-server-deployment.yaml  server-deployment.yaml
