[package]
name = "jji421-myapp"
version = "0.1.0"
authors = ["junwon.jang <junwonjang2018@u.northwestern.edu>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
js-sys = "0.3.4"

console_error_panic_hook = { version = "0.1.1", optional = true }

wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'console',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlInputElement',
  'InputEvent',
  'MessageEvent',
  'MouseEvent',
  'Node',
  'NodeList',
  'Window',
  'Performance',
  'PerformanceTiming',
  'WebSocket',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.dev]
opt-level = "z"
lto = true

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
